# complider

./: Cargo.toml  flake.nix
res/: CarExport.mtl  CarExportVertex.mtl
src/: camera.rs  data.rs  light.frag  light.rs  light.vert  main.rs  model.rs  resources.rs  shader.frag  shader.vert  texture.rs  vertex.rs
