[package]
name = "complider"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bytemuck = { version = "1.19.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.5"
glam = "0.29.2"
image = "0.25.5"
log = "0.4.22"
pollster = "0.3.0"
wgpu = { version = "22.1.0", features = ["glsl"] }
winit = { version = "0.29", features = ["rwh_05"] }
